--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Ruan <ruan_kaylo@yahoo.com.br>",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "@videojs/http-streaming": "^1.9.2",
     "bulma": "^0.7.4"
   }
