--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.7.2",
     "@videojs/http-streaming": "^1.9.2",
-    "bulma": "^0.7.4"
+    "bulma": "^0.7.4",
+    "jquery": "^3.3.1"
   }
 }
