--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "videos_on_demand",
-  "private": false,
+  "private": true,
   "version": "0.0.1",
   "description": "Netshow.me Challenge",
   "author": "Ruan <ruan_kaylo@yahoo.com.br>",
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.7.2",
-    "@videojs/http-streaming": "^1.9.2",
-    "bulma": "^0.7.4",
-    "jquery": "^3.3.1"
+    "@videojs/http-streaming": "^1.9.2"
   }
 }
